[package]
name = "gqueues-api-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust client for the GQueues API"
license = "MIT"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["v4", "serde"] }
thiserror = "2.0"
log = "0.4"
