[package]
name = "gqueues-api-rs"
version = "0.2.3"
edition = "2024"
description = "A Rust client for the GQueues API"
repository = "https://github.com/syntax-and-scale/gqueues-api-rs"
homepage = "https://github.com/syntax-and-scale/gqueues-api-rs"
keywords = ["gqueues", "api", "client", "tasks"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["v4", "serde"] }
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
